[package]
name = "smoosh"
description = "automatic async recompression!"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/queer/smoosh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.4.0", features = ["all-algorithms", "tokio"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "io-util", "test-util", "rt", "macros"] }
